# internal/admin/api/oas_validators_gen.go
@@ -513,6 +513,29 @@ func (s *GuildsListOK) Validate() error {
 	return nil
 }
 
+func (s *LLMPreset) Validate() error {
+	if s == nil {
+		return validate.ErrNilPointer
+	}
+
+	var failures []validate.FieldError
+	if err := func() error {
+		if s.Capabilities == nil {
+			return errors.New("nil is invalid value")
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "capabilities",
+			Error: err,
+		})
+	}
+	if len(failures) > 0 {
+		return &validate.Error{Fields: failures}
+	}
+	return nil
+}
+
 func (s *LocationListDevicesOK) Validate() error {
 	if s == nil {
 		return validate.ErrNilPointer
